--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
   "extends": ["react-app", "plugin:react/recommended", "prettier"],
   "plugins": ["react", "prettier"],
   "rules": {
