--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.6"
